Adicionado score no retorno das meditações